@@ -17,12 +17,12 @@ lon, lat = np.meshgrid(nc.variables['lon'][:], nc.variables['lat'][:])
 humid = nc.variables['qv'][:]
 
 fig, ax = plt.subplots(figsize=(10, 8))
-m = Basemap(projection='cyl', resolution='l',
+m = Basemap(projection='cyl', resolution='i',
             llcrnrlat=47, llcrnrlon=4,
             urcrnrlat=56, urcrnrlon=16)
 m.drawcoastlines()
 m.drawcountries()
-m.contourf(lon, lat, humid, 256, latlon=True, cmap='density')
+m.pcolormesh(lon, lat, humid, latlon=True, cmap='density')
 m.colorbar()
 ax.set_xlabel('Longitude', size=16)
 ax.set_ylabel('Latitude', size=16)
