@@ -1,3 +1,15 @@
+2016-02-16  Lukas Kluft <lukas.kluft@gmail.com>
+
+	* doc/pyplots/plot_density.py, doc/pyplots/plot_phase.py,
+	doc/pyplots/plot_speed.py, doc/pyplots/plot_temperature.py:
+
+	Use pcolormesh instead of contourf to prevent the interpolation of data
+	points.
+
+	Wind directions are now displayed with quivers instead of barbs.
+
+	Use a finer map resolution for better look.
+
 2016-02-16  Oliver Lemke  <olemke@core-dump.info>
 
 	* typhon/__init__.py: Increased version to 0.2.3 after upload to PyPi.
